# scicookie

docs/: guide.md
src/scicookie/: cookiecutter.json
src/scicookie/profiles/: base.yaml  osl.yaml
src/scicookie/{{cookiecutter.project_slug}}/: README.md
src/scicookie/{{cookiecutter.project_slug}}/build-system/base/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/build-system/poetry/: pyproject.toml
src/scicookie/{{cookiecutter.project_slug}}/virtualenvs/pyenv/: requirements.txt
tests/profiles/: test-depends-on.yaml  test-main.yaml
