[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
  { name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}" },
]
description = "{{ cookiecutter.project_short_description }}"
{% if cookiecutter.build_system not in ["setuptools", "scikit-build-core", "pybind11", "pixi", "uv"]%}
{% if cookiecutter.project_layout == "src" -%}
packages = [
  {include = "{{ cookiecutter.package_slug }}", from="src"},
]
{% else -%}
packages = [
  {include = "{{ cookiecutter.package_slug }}"},
]
{% endif -%}
{% endif -%}
readme = "README.md"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
{%- if cookiecutter.project_license == "MIT" %}
  "License :: OSI Approved :: MIT License",
{%- elif cookiecutter.project_license == "BSD 3 Clause" %}
  "License :: OSI Approved :: BSD License",
{%- elif cookiecutter.project_license == "Apache Software License 2.0" %}
  "License :: OSI Approved :: Apache Software License",
{%- elif cookiecutter.project_license == "GNU General Public License v3" %}
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
{% endif %}
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
{%- if cookiecutter.use_mypy == "yes" %}
  "Typing :: Typed",
{% endif -%}
]
{% if cookiecutter.build_system in ["scikit-build-core", "pixi", "uv"] %}
version = "{{ cookiecutter.project_version }}"
{% else %}
dynamic = ["version"]
{% endif -%}
requires-python = ">=3.10,<4"
dependencies = [
{%- if cookiecutter.use_altair == "yes" %}
  "altair",
{%- endif %}
{%- if cookiecutter.use_beautifulsoup4 == "yes" %}
  "beautifulsoup4",
{%- endif %}
{%- if cookiecutter.use_bokeh == "yes" %}
  "bokeh",
{%- endif %}
{%- if cookiecutter.use_dash == "yes" %}
  "dash",
{%- endif %}
{%- if cookiecutter.use_folium == "yes" %}
  "folium",
{%- endif %}
{%- if cookiecutter.use_ibis_framework == "yes" %}
  "ibis-framework",
{%- endif %}
{%- if cookiecutter.use_jupyterlab == "yes" %}
  "jupyterlab",
{%- endif %}
{%- if cookiecutter.use_langchain == "yes" %}
  "langchain",
{%- endif %}
{%- if cookiecutter.use_matplotlib == "yes" %}
  "matplotlib",
{%- endif %}
{%- if cookiecutter.use_nltk == "yes" %}
  "nltk",
{%- endif %}
{%- if cookiecutter.use_numpy == "yes" %}
  "numpy",
{%- endif %}
{%- if cookiecutter.use_openai == "yes" %}
  "openai",
{%- endif %}
{%- if cookiecutter.use_pandas == "yes" %}
  "pandas",
{%- endif %}
{%- if cookiecutter.use_panel == "yes" %}
  "panel",
{%- endif %}
{%- if cookiecutter.use_plotly == "yes" %}
  "plotly",
{%- endif %}
{%- if cookiecutter.use_polars == "yes" %}
  "polars",
{%- endif %}
{%- if cookiecutter.use_pytorch_cpu == "yes" %}
  "torch",
  "torchvision",
  "torchaudio",
{%- endif %}
{%- if cookiecutter.use_pytorch_gpu == "yes" %}
  "torch",
  "torchvision",
  "torchaudio",
{%- endif %}

{%- if cookiecutter.use_quarto_cli == "yes" %}
  "quarto-cli",
{%- endif %}
{%- if cookiecutter.use_rago == "yes" %}
  "rago",
{%- endif %}
{%- if cookiecutter.use_requests == "yes" %}
  "requests",
{%- endif %}
{%- if cookiecutter.use_scikit_learn == "yes" %}
  "scikit-learn",
{%- endif %}
{%- if cookiecutter.use_scipy == "yes" %}
  "scipy",
{%- endif %}
{%- if cookiecutter.use_scrapy == "yes" %}
  "scrapy",
{%- endif %}
{%- if cookiecutter.use_seaborn == "yes" %}
  "seaborn",
{%- endif %}
{%- if cookiecutter.use_spacy == "yes" %}
  "spacy",
{%- endif %}
{%- if cookiecutter.use_statsmodels == "yes" %}
  "statsmodels",
{%- endif %}
{%- if cookiecutter.use_tensorflow == "yes" %}
  "tensorflow",
{%- endif %}
{%- if cookiecutter.use_xgboost == "yes" %}
  "xgboost",
{%- endif %}
]

{# keep this line here -#}
